--- a/404.html
+++ b/404.html
@@ -84,8 +84,8 @@
 <body class="not-found">
   <div class="container">
     <div class="error-code">404</div>
-    <h1>Uh Oh!</h1>
-    <p>The page you're looking for vanished into the digital ether.</p>
+    <h1>Doc Not Found</h1>
+    <p>This doc does not exist, to get to a specific doc, go through www.mas0ng.com</p>
     <a href="index.html" class="btn" style="margin-top: 30px;">Return Home</a>
   </div>
 </body>
