--- a/gameSheild/index.html
+++ b/gameSheild/index.html
@@ -10,7 +10,7 @@
 	<body> 
 		<main>
 			<section class="hero">
-				<h1>GuardSheild</h1>
+				<h1>GameSheild</h1>
 				<p>A chrome extension that auto detects games and blocks them</p>
 				<a href="https://github.com/mas0ng/GameShield" class="btn">Open On GitHub</a>
 			</section>
