Update and rename index.html to index.html

--- a/gameShield/index.html
+++ b/gameShield/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Docs - GameSheild</title>
+		<title>Docs - GameShield</title>
 		<link rel="stylesheet" href="/style.css" />
 		<link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
 	</head>
 	<body> 
 		<main>
 			<section class="hero">
-				<h1>GameSheild</h1>
+				<h1>GameShield</h1>
 				<p>A chrome extension that auto detects games and blocks them</p>
 				<a href="https://github.com/mas0ng/GameShield" class="btn">Open On GitHub</a>
 			</section>
