--- a/docs.html
+++ b/docs.html
@@ -34,7 +34,7 @@
       }
 
       // Retrieve the project reference from the URL (e.g., ?ref=GameShield)
-      const projectRef = getQueryParam('projectNameRef');
+      const projectRef = getQueryParam('doc');
 
       // Redirect to the 404 page if no ref parameter is provided
       if (!projectRef) {
